# PwnKit

./: Cargo.toml  LICENSE
src/: context.rs  elf.rs  error.rs  fmt.rs  lib.rs  pack.rs
src/rop/: chain.rs  decode.rs  gadget.rs  mod.rs  srop.rs
src/tubes/: buffer.rs  mod.rs  process.rs  remote.rs  tube.rs
src/util/: cyclic.rs  flat.rs  hexdump.rs  mod.rs
